cmake_minimum_required(VERSION 2.8)

project(GrammaireLangage)
add_executable(${PROJECT_NAME} "Sources/main.cpp" Sources/Automate.cpp Sources/Automate.h Sources/Lexer.cpp Sources/Lexer.h Sources/Symbol.cpp Sources/Symbol.h Sources/State.cpp Sources/State.h Sources/Expression.cpp Sources/Expression.h Sources/State1.cpp Sources/State1.h Sources/State2.cpp Sources/State2.h Sources/State3.cpp Sources/State3.h Sources/State4.cpp Sources/State4.h Sources/State5.cpp Sources/State5.h Sources/Config.h)
